Fixed styling so content isnt cropped when squished

--- a/frontend/src/styles/AvatarPage.scss
+++ b/frontend/src/styles/AvatarPage.scss
@@ -6,7 +6,6 @@
   height: 75%;
   max-height: 650px;
 
-  top: calc(50% + 35px);
   padding: 60px 75px;
 
   .vertical-divider,
