--- a/frontend/src/styles/AvatarPageMobile.scss
+++ b/frontend/src/styles/AvatarPageMobile.scss
@@ -1,17 +1,8 @@
 .avatars.mobile.--container {
   width: 90%;
   max-width: 700px;
-  // height: 100%;
-  // max-height: 650px;
+
   padding: 20px 20px 50px;
-
-  top: 165px;
-  transform: translate(-50%, -80px);
-
-  @media (min-width: 991px) {
-    top: 60%;
-    transform: translate(-50%, -50%);
-  }
 
   .vertical-divider,
   .horizontal-divider {
