--- a/frontend/src/styles/SignUpPage.scss
+++ b/frontend/src/styles/SignUpPage.scss
@@ -1,8 +1,12 @@
+// TODO: Dynamic sizing so that it is legible on all screens
+
 // Styling for account creation prompt
 .signup.--container {
   width: 400px;
   min-width: 300px;
   padding: 60px 85px 50px;
+
+  margin-top: 30px;
 
   .header {
     margin: 0 0 20px;
@@ -70,11 +74,5 @@
   .signup.--container {
     max-width: 90%;
     padding: 50px 50px 40px;
-  }
-}
-
-@media (max-height: 700px) {
-  .signup.--container:not(.success) {
-    margin: 50px 0 0;
   }
 }
